# poly_control_plane

./: .env.example  .gitignore  README.md  pyproject.toml
alembic/: README.md
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: actions.py  ingest.py  liquidity_rewards.py  logs.py  market.py  overview.py  polymarket_trades.py  services.py  session.py  trades.py  trading.py
app/core/: config.py  http.py
app/db/: session.py
app/services/: action_executor.py  binance.py  liquidity_rewards.py  log_stream.py  mock_data.py  orderbook.py  polymarket_data.py  polymarket_poller.py  polymarket_trading.py  repository.py  runtime_state.py
docs/: bot-control-plane-communication.md
live-trading-frontend/: README.md  app.js  index.html  styles.css
scripts/: restart.sh  trade.py
sql/: mvp_step2_tables.sql  mvp_step3_hybrid_ingest.sql
tests/: test_binance.py  test_health.py
